add new lsi mega sas3 driver
Change-Id: I77dfdb00a941b452419c15663fcc6765a025133f

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,3 +23,4 @@ packages =
 [entry_points]
 ironic_python_agent.hardware_managers =
     megautils = megautils.ipa_mega_manager.hardware_manager:MegaHardwareManager
+    megautilssas3 = megautils.ipa_mega_manager.hardware_manager:MegaSAS3HardwareManager
