--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ oslo.utils>=3.20.0 # Apache-2.0
 jsonschema!=2.5.0,<3.0.0,>=2.0.0 # MIT
 retrying!=1.3.0,>=1.2.3 # Apache-2.0
 pysnmp>=4.2.3,<5.0.0  # BSD
-pexpect>=4.6.0
+pexpect>=4.6.0 # Apache
